--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "studio": "sanity dev --port 3333"
   },
   "dependencies": {
     "@sanity/client": "^7.4.0",
+    "@sanity/vision": "^3.90.0",
+    "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.79.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "sanity": "^3.90.0",
+    "styled-components": "^6.1.18",
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
